Fixed background and overflow issues

--- a/portal-frontend/src/App.css
+++ b/portal-frontend/src/App.css
@@ -39,7 +39,25 @@
 }
 
 .hero-background {
-  position: relative;
+  position: absolute;
+}
+
+.hero-bg-4{
+  top:'0vh';
+  right:'0vw';
+}
+
+.bg-picture-left{
+  position: absolute;
+  top: 0vh;
+  right: 0vw;
+}
+.bg-picture-right{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  top: 0vh;
+  left: 0vw;
 }
 
 .bg-picture{
@@ -121,7 +139,7 @@
   }
 
   .hero-bg-1,
-  .hero-bg-2 {
+  .hero-bg-2{
     display: none; /* Hide these sections */
   }
 }
